--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -62,11 +62,17 @@ For more information, see xref:administration:tshoot-registertradrhel.adoc[].
 ====
 
 
-.Procedure: Creating a Software Repository
+You can only add a repository to the {productname} with the {webui} if it is a valid software repository.
+Check in advance that needed repository metadata are available.
+Tools such as [command]``createrepo`` and [command]``reprepro`` are useful in this regard.
+[command]``mgr-push`` can help with pushing a single RPM into a channel without creating a repository.
+For more information, see the  man pages for [literal]``createrepo_c`` and [literal]``reprepro``.
+
+.Procedure: Adding a Software Repository
 . In the {productname} {webui}, navigate to menu:Software[Manage > Repositories], and click btn:[Create Repository].
 . On the [guimenu]``Create Repository`` page, give your repository a label (for example, [systemitem]``my-tools-sles15sp1-x86_64-repo``).
 . In the [guimenu]``Repository URL`` field, provide the path to the directory that contains the [path]``repodata`` file (for example, [systemitem]``file:///opt/mytools/``).
-    You can use any valid addressing protocol in this field.
+  You can use any valid addressing protocol in this field.
 . Uncheck the [guimenu]``Has Signed Metadata?`` check box.
 . OPTIONAL: Complete the SSL fields if your repository requires client certificate authentication.
 . Click btn:[Create Repository].
