--- a/modules/installation-and-upgrade/pages/proxy-setup.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-setup.adoc
@@ -279,8 +279,11 @@ After the installation of the new proxy, you might also need to:
 
 === Serving big files
 
-If you need to distribute big files such as ISO images to your network through the proxy. On the PROXY_HOSTNAME system, copy the big files to the /srv/www/htdocs/pub directory.
+If you need to distribute big files such as ISO images to your network through the proxy. On the PROXY_HOSTNAME system, copy the big files to the [guimenu]``/srv/www/htdocs/pub directory``.
 
 
-Then, files can be downloaded from http://PROXY_HOSTNAME/pub.
+Then, files can be downloaded from 
+----
+http://PROXY_HOSTNAME/pub
+----
 
