--- a/modules/client-configuration/pages/bootstrap-repository.adoc
+++ b/modules/client-configuration/pages/bootstrap-repository.adoc
@@ -32,8 +32,8 @@ This section details the various settings.
 
 
 
-.Flush Mode
-
+.Flush Mode::
+Flush Mode::
 By default, existing repositories are updated only with the latest packages.
 You can configure it to always start with an empty repository instead.
 To enable this behavior, add or edit this value in [path]``/etc/rhn/rhn.conf``:
@@ -43,8 +43,8 @@ server.susemanager.bootstrap_repo_flush = 1
 ----
 
 
-
-.Automatic Mode
+.Automatic Mode::
+Automatic Mode::
 
 By default, automated regeneration of the bootstrap repositories is enabled.
 To disable it, add or edit this value in [path]``/etc/rhn/rhn.conf``:
