Random formatting fixes (#1439)
* Minor procedure formatting fix.

* Minor procedure formatting fix.

* Minor procedure formatting fixes.

* Minor navbar change.

* More fixes.

* Table formatting error.

* Removed admonition title.

* Another procedure formatting fix..

* Plain text to table, for better readability.

* Removed extra files.

* Minor procedure formatting fix.

* Minor procedure formatting fix.

* Minor procedure formatting fixes.

* Minor navbar change.

* More fixes.

* Table formatting error.

* Removed admonition title.

* Another procedure formatting fix..

* Plain text to table, for better readability.

* Removed extra files.

* More changes.

* Fixes.

* Missing images.

* Corrected PostgreSQL writing.

* Corrected PostgreSQL writing.

--- a/modules/client-configuration/pages/autoinst-pxeboot.adoc
+++ b/modules/client-configuration/pages/autoinst-pxeboot.adoc
@@ -1,5 +1,5 @@
 [[autoinst-pxeboot]]
-= Install via the Network
+= Install via the Network (PXE Boot)
 
 During a network boot installation:
 
@@ -111,6 +111,7 @@ zypper install susemanager-tftpsync-recv
 . On the proxy, as root, run the [command]``configure-tftpsync.sh`` script.
   The script interactively asks you for details on the host names and IP addresses of the {productname} Server and Proxy, as well for the location of the [path]``tftpboot`` directory on the Proxy. For more information, use the [command]``configure-tftpsync.sh --help`` command.
 . On the server, as root, run the [command]``configure-tftpsync.sh`` script.
++
 ----
 configure-tftpsync.sh proxy1.example.com proxy2.example.com
 ----
