--- a/modules/installation-and-upgrade/pages/db-intro.adoc
+++ b/modules/installation-and-upgrade/pages/db-intro.adoc
@@ -20,15 +20,15 @@ This table shows the PostgreSQL version required for each version of {productnam
 
 | {productname} 4.0.0
 | SLES 15 SP1
-| Postgres 10
+| PostgreSQL 10
 
 | {productname} 4.1.0
 | SLES 15 SP2
-| Postgres 12
+| PostgreSQL 12
 
 | {productname} 4.2.0
 | SLES 15 SP3
-| Postgres 13
+| PostgreSQL 13
 
 | {productname} 4.3.0
 | SLES 15 SP4
