Backported random formatting fixes.

--- a/modules/client-configuration/pages/autoinst-pxeboot.adoc
+++ b/modules/client-configuration/pages/autoinst-pxeboot.adoc
@@ -1,5 +1,5 @@
 [[autoinst-pxeboot]]
-= Install via the Network
+= Install via the Network (PXE Boot)
 
 During a network boot installation:
 
@@ -63,6 +63,7 @@ Edit the DHCP configuration file so that it points to the installation server as
 .Example: Configuring the ISC DHCP Server
 . On the DHCP server, as root, open the [path]``/etc/dhcpd.conf`` file.
 . Modify the declaration for your client:
++
 ----
   host myclient { (...)
                   next-server 192.168.2.1;
@@ -101,16 +102,19 @@ Every added proxy slows down the tree synchronization.
 
 .Procedure: Synchronizing TFTP between Server and Proxy
 . On the {productname} Server, at the command prompt, as root, install the [systemitem]``susemanager-tftpsync`` package:
++
 ----
 zypper install susemanager-tftpsync
 ----
 . On the {productname} Proxy, at the command prompt, as root, install the [systemitem]``susemanager-tftpsync-recv`` package:
++
 ----
 zypper install susemanager-tftpsync-recv
 ----
 . On the proxy, as root, run the [command]``configure-tftpsync.sh`` script.
   The script interactively asks you for details on the host names and IP addresses of the {productname} Server and Proxy, as well for the location of the [path]``tftpboot`` directory on the Proxy. For more information, use the [command]``configure-tftpsync.sh --help`` command.
 . On the server, as root, run the [command]``configure-tftpsync.sh`` script.
++
 ----
 configure-tftpsync.sh proxy1.example.com proxy2.example.com
 ----
