--- a/modules/client-configuration/pages/bootstrap-repository.adoc
+++ b/modules/client-configuration/pages/bootstrap-repository.adoc
@@ -31,8 +31,7 @@ You can change how the automated bootstrap repository creation works.
 This section details the various settings.
 
 
-
-.Flush Mode
+Flush Mode::
 
 By default, existing repositories are updated only with the latest packages.
 You can configure it to always start with an empty repository instead.
@@ -43,8 +42,7 @@ server.susemanager.bootstrap_repo_flush = 1
 ----
 
 
-
-.Automatic Mode
+Automatic Mode::
 
 By default, automated regeneration of the bootstrap repositories is enabled.
 To disable it, add or edit this value in [path]``/etc/rhn/rhn.conf``:
