--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -12,9 +12,9 @@ In this section, we use a KVM and a virtual machine manager as a sandbox for the
 
 Use these settings to create a new virtual machine with [command]``virt-manager`` (replace [literal]``<version>`` with the actual version string):
 
+. KVM Settings for SLES
 [cols="1,1", options="header"]
 |===
-| KVM Settings for SLES
 | Installation Method: | Local install media (ISO image or CDROM)
 | OS:                  | Linux
 | Version:             |``SLE-``[literal]``<version>````-Server-x86_64-GM-DVD1.iso``
