--- a/modules/installation/pages/webui-setup.adoc
+++ b/modules/installation/pages/webui-setup.adoc
@@ -136,25 +136,22 @@ Click the column header again to reverse the sort.
 Patches are represented by three main icons, depending on the type of patch.
 Icons are coloured either green, yellow, or red, depending on the severity.
 
-icon:shield-alt[role="none"]
-The shield icon is a security alert.
-A red shield is the highest priority security alert.
-
-icon:bug[role="none"]
-The bug icon is a bug fix alert.
-
-image:spacewalk-icon-enhancement.svg[Enhancement Alert,scaledwidth=1.4em]
-The squares icon is an enhancement alert.
+[cols="1,1", options="header"]
+|===
+|                             |  
+|icon:shield-alt[role="none"] | The shield icon is a security alert.
+|                             | A red shield is the highest priority security alert.
+|icon:bug[role="none"]        | The bug icon is a bug fix alert.
+|image:spacewalk-icon-enhancement.svg[Enhancement Alert,scaledwidth=1.4em] | The squares icon is an enhancement alert.
+|===
 
 Some additional icons are used to give extra information:
 
-icon:sync[role="none"]
-The circling arrows icon indicates that applying a patch will require a reboot.
-
-icon:archive[role="none"]
-The archive box icon indicates that a patch will have an effect on package management.
-
-
+[cols="1,1", options="header"]
+|===
+|icon:sync[role="none"]       | The circling arrows icon indicates that applying a patch will require a reboot.
+|icon:archive[role="none"]    | The archive box icon indicates that a patch will have an effect on package management.
+|===
 
 === Interface Customization
 
