--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -41,10 +41,9 @@ Find the JeOS image at https://download.suse.com/.
 | Network             | Bridge _br0_
 |===
 
-.{sle} Virtualization Guide
 [NOTE]
 ====
-For more information on virtualization, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/book-virtualization.html.
+For more information on {sle} Virtualization Guide, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/book-virtualization.html.
 ====
 
 
