--- a/modules/upgrade/pages/db-intro.adoc
+++ b/modules/upgrade/pages/db-intro.adoc
@@ -20,35 +20,35 @@ This table shows the PostgreSQL version required for each version of {productnam
 
 | {productname} 3.1.4
 | SLES 12 SP3
-| Postgres 9.6
+| PostgreSQL 9.6
 
 | {productname} 3.1.11
 | SLES 12 SP3
-| Postgres 9.6
+| PostgreSQL 9.6
 
 | {productname} 3.2.10
 | SLES 12 SP3
-| Postgres 9.6
+| PostgreSQL 9.6
 
 | {productname} 3.2.10
 | SLES 12 SP3
-| Postgres 10
+| PostgreSQL 10
 
 | {productname} 3.2.10
 | SLES 12 SP4
-| Postgres 10
+| PostgreSQL 10
 
 | {productname} 4.0.0
 | SLES 15 SP1
-| Postgres 10
+| PostgreSQL 10
 
 | {productname} 4.1.0
 | SLES 15 SP2
-| Postgres 12
+| PostgreSQL 12
 
 | {productname} 4.2.0
 | SLES 15 SP3
-| Postgres 13
+| PostgreSQL 13
 
 |===
 
