--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -282,7 +282,7 @@ If you need to distribute big files such as ISO images to your network through t
 On the PROXY_HOSTNAME system, copy the big files to the [path]``/srv/www/htdocs/pub`` directory.
 
 
-Then, files can be downloaded from 
+Then, files can be downloaded from:
 ----
-http://PROXY_HOSTNAME/pub.
+http://PROXY_HOSTNAME/pub
 ----
