Backport42 - Random formatting fixes (#1442)
* Backported random formatting fixes.

* Update modules/installation/pages/proxy-setup.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -5,7 +5,6 @@
 
 // REMARK 2019-08-23, ke: Is this a Salt proxy-only feature?
 [NOTE]
-.Proxy Chains
 ====
 It is possible to arrange Salt proxies in a chain.
 In such a case, the upstream proxy is named `parent`.
@@ -121,8 +120,6 @@ To check the status of the proxy system and its clients, click the proxy system'
 [[proxy.pxe.setup]]
 == Enable PXE Boot
 
-
-
 [[proxy.pxe.sync]]
 === Synchronize Profiles and System Information
 
@@ -130,41 +127,31 @@ To enable PXE boot through a proxy, additional software must be installed and co
 
 . On the {productname} Proxy, install the [package]``susemanager-tftpsync-recv`` package:
 +
-
 ----
 zypper in susemanager-tftpsync-recv
 ----
-
 . On the {productname} Proxy, run the [command]``configure-tftpsync.sh`` setup script and enter the requested information:
 +
-
 ----
 configure-tftpsync.sh
 ----
 +
-
-You need to provide the hostname and IP address of the {productname} Server and the proxy.
-You also need to enter the path to the tftpboot directory on the proxy.
-
+. You also need to enter the path to the tftpboot directory on the proxy.
 . On the {productname} Server, install [package]``susemanager-tftpsync``:
 +
-
 ----
 zypper in susemanager-tftpsync
 ----
-
++
 // same file name on the server and proxy!
 . On the {productname} Server, run [command]``configure-tftpsync.sh``.
     This creates the configuration, and uploads it to the {productname} Proxy:
 +
-
 ----
 configure-tftpsync.sh FQDN_of_Proxy
 ----
-
 . Start an initial synchronization on the {productname} Server:
 +
-
 ----
 cobbler sync
 ----
@@ -295,5 +282,7 @@ If you need to distribute big files such as ISO images to your network through t
 On the PROXY_HOSTNAME system, copy the big files to the [path]``/srv/www/htdocs/pub`` directory.
 
 
-Then, files can be downloaded from http://PROXY_HOSTNAME/pub.
-
+Then, files can be downloaded from:
+----
+http://PROXY_HOSTNAME/pub
+----
