Described GPG key removal.

--- a/modules/administration/pages/tshoot-sync.adoc
+++ b/modules/administration/pages/tshoot-sync.adoc
@@ -45,6 +45,17 @@ RepoMDError: Cannot access repository. Maybe repository GPG keys are not importe
 To resolve the problem, you need to import the GPG key to {productname}.
 For more on importing GPG keys, see xref:administration:repo-metadata.adoc[].
 
+
+GPG Key Removal::
+Once GPG key for repository is imported using [literal]``spacewalk-repo-sync command``, and is no longer needed (e.g. if the the key was  compromised, or was used for testing purposes only), it can be removed using the command:
++
+----
+rpm --dbpath=/var/lib/spacewalk/reposync/root/var/lib/rpm/ -e gpg-pubkey-*
+----
++
+where [literal]``gpg-pubkey-*`` is the name of the GPG key to be removed.
+
+
 Checksum Mismatch::
 If a checksum has failed, you might see an error like this in the [path]``/var/log/rhn/reposync/*.log`` log file:
 +
@@ -65,6 +76,7 @@ spacewalk-repo-sync --channel <channelname> -Y
 ----
 +
 This option verifies the repository data before the synchronization, rather than relying on locally cached checksums.
+
 
 Connection Timeout::
 If the download times out with the following error:
