Fixed Vale reported error.

--- a/modules/administration/pages/tshoot-sync.adoc
+++ b/modules/administration/pages/tshoot-sync.adoc
@@ -47,7 +47,7 @@ For more on importing GPG keys, see xref:administration:repo-metadata.adoc[].
 
 
 GPG Key Removal::
-Once GPG key for repository is imported using [literal]``spacewalk-repo-sync command``, and is no longer needed (e.g. if the the key was  compromised, or was used for testing purposes only), it can be removed using the command:
+Once GPG key for repository is imported using [literal]``spacewalk-repo-sync command``, and is no longer needed (for example if the the key was  compromised, or was used for testing purposes only), it can be removed using the command:
 +
 ----
 rpm --dbpath=/var/lib/spacewalk/reposync/root/var/lib/rpm/ -e gpg-pubkey-*
