--- a/modules/administration/pages/tshoot-sync.adoc
+++ b/modules/administration/pages/tshoot-sync.adoc
@@ -46,7 +46,7 @@ To resolve the problem, you need to import the GPG key to {productname}.
 For more on importing GPG keys, see xref:administration:repo-metadata.adoc[].
 
 
-GPG Key Removal::
+GPG Key Removal from "spacewalk-repo-sync"::
 Once GPG key for repository is imported using [literal]``spacewalk-repo-sync command``, and is no longer needed (for example if the the key was  compromised, or was used for testing purposes only), it can be removed using the command:
 +
 ----
