Backporting the change.

--- a/modules/administration/pages/repo-metadata.adoc
+++ b/modules/administration/pages/repo-metadata.adoc
@@ -94,3 +94,5 @@ rpm --import http://server.example.com/pub/mgr-gpg-pub.key
 salt <ubuntu-client> state.apply channels
 ----
 . OPTIONAL: For Salt clients, you might prefer to use a state to manage your GPG keys.
+
+For more information about troubleshooting GPG keys, see xref:administration:tshoot-sync.adoc[].
