File name and title changed.

--- a/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
+++ b/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
@@ -1,5 +1,5 @@
-[[salt-gpg-encrypted-pillar]]
-= GPG Encrypted Pillar
+[[salt-gpg-encrypted-pillars]]
+= GPG Encrypted Pillars
 
 {salt} has support for transparently decrypt GPG-encrypted Pillar data built-in.
 The decryption happens on the {salt} Master.
