--- a/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
+++ b/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
@@ -1,7 +1,7 @@
 [[salt-gpg-encrypted-pillars]]
 = GPG Encrypted Pillars
 
-{salt} has support for transparently decrypt GPG-encrypted Pillar data built-in.
+{salt} has support to transparently decrypt GPG-encrypted Pillar data built-in.
 The decryption happens on the {salt} Master.
 
 
@@ -9,7 +9,7 @@ The decryption happens on the {salt} Master.
 
 The GPG keyring can be specified in [literal]```/etc/salt/master``` or in its own file under [literal]```/etc/salt/master.d/```, for example [literal]```/etc/salt/master.d/gpg-pillar.conf```. 
 
-Always create separate keyring for the {salt} Master.
+Always create a separate keyring for the {salt} Master.
 
 [[proc-key-pair-generation]]
 .Procedure: Generating key pair
