--- a/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
+++ b/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
@@ -7,7 +7,7 @@ The decryption happens on the {salt} Master.
 
 == Generate GPG keyring for {salt} Master
 
-The GPG keyring can be specified in [literal]```/etc/salt/master``` or in its own file under [literal]```/etc/salt/master.d/```, for example [literal]```/etc/salt/master.d/gpg-pillar.conf```. 
+The GPG keyring can be specified in [path]``/etc/salt/master`` or in its own file under [path]``/etc/salt/master.d/``, for example [path]``/etc/salt/master.d/gpg-pillar.conf``. 
 
 Always create a separate keyring for the {salt} Master.
 
