--- a/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
+++ b/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
@@ -63,7 +63,7 @@ echo 't0ps3cr3t' | gpg --armor --batch --encrypt --recipient "SUMA Salt Master"
 ----
 
 
-Once the GPG encrytped contents are created and available as ASCII-armored output, this output can be used as a multi-line string in a pillar yaml file like below.
+When the GPG encrytped contents are created and available as ASCII-armored output, this output can be used as a multi-line string in a pillar YAML file:
 ----
 #!yaml|gpg
 
