--- a/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
+++ b/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
@@ -89,7 +89,7 @@ Once the pillar is assigned to a system via the [literal]```top.sls```, the GPG 
 
 [NOTE]
 ====
-The minion’s in-memory cache is only updated on startup or when running execution module functions that trigger a cache refresh (for example [literal```saltutil.refresh_pillar```, [litaral]```pillar.items```, or [literal]```state.apply```)
+The client's in-memory cache is only updated on startup or when running execution module functions that trigger a cache refresh such as [literal]``saltutil.refresh_pillar``, [litaral]``pillar.items``, or [literal]``state.apply``.
 ====
 
 ----
