--- a/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
+++ b/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
@@ -106,7 +106,7 @@ To export the GPG key, use the command:
 ----
 gpg --export 'SUMA Salt Master' --homedir /etc/salt/gpgkeys --output suma-salt-master.gpg
 ----
-where 'SUMA Salt Master' is the name used during key generation.
+Here 'SUMA Salt Master' is the name used during key generation.
 
 The [literal]```suma-salt-master.gpg``` public key can be freely shared.
 
