--- a/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
+++ b/modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc
@@ -84,7 +84,7 @@ secret:
 ----
 
 
-Once the pillar is assigned to a system via the [literal]```top.sls```, the GPG encrypted pillar data is available in a decrypted format. 
+When the pillar is assigned to a system with [path]``top.sls``, the GPG encrypted pillar data is available in a decrypted format. 
 
 
 [NOTE]
