Bug fix, reorganizing the existing document to make more sense.

--- a/modules/client-configuration/pages/vhm-azure.adoc
+++ b/modules/client-configuration/pages/vhm-azure.adoc
@@ -7,9 +7,14 @@ The VHM allows {productname} to obtain and report information about your virtual
 For more information on VHMs, see xref:client-configuration:vhm.adoc[].
 
 
+== Prerequisites
+
+The VHM you create needs to have the correct permissions assigned, in order for it to access the Azure VM.
+
+Log in to your Azure account as the subscription administrator, and ensure that the Azure user account and application are in the correct groups.
+The group that the application is in determines the role it has, and therefore the permissions.
 
 == Create an Azure VHM
-
 
 The Virtual Host Manager (VHM) runs on the {productname} Server.
 
@@ -22,11 +27,11 @@ Ensure you have installed the [systemitem]``virtual-host-gatherer-libcloud`` pac
 . Click btn:[Create] and select [guimenu]``Azure`` from the drop-down menu.
 . In the [guimenu]``Add an Azure Virtual Host Manager`` section, use these parameters:
 * In the [guimenu]``Label`` field, type a custom name for your VHM.
-* In the [guimenu]``Subscription ID`` field, type the subscription ID provided by Azure.
-* In the [guimenu]``Application ID`` field, type the application ID provided by Azure.
-* In the [guimenu]``Tenant ID`` field, type the tenant ID provided by Azure.
+* In the [guimenu]``Subscription ID`` field, type the subscription ID found in [path]``Azure portal > Services > Subscriptions`` page.
+* In the [guimenu]``Application ID`` field, type the application ID that you collected when you registered the application.
+* In the [guimenu]``Tenant ID`` field, type the tenant ID provided by Azure that you collected when you registered the application.
 * In the [guimenu]``Secret Key`` field, type the secret key associated with the Azure instance.
-* In the [guimenu]``Zone`` field, type the zone your VM is located in.
+* In the [guimenu]``Zone`` field, type the zone your VM is located in. For example, for West Europe, enter [path]``westeurope``.
     This is required for subscription matching to work.
 . Click btn:[Create] to save your changes and create the VHM.
 . On the [guimenu]``Virtual Host Managers`` page, select the new VHM.
@@ -35,14 +40,8 @@ Ensure you have installed the [systemitem]``virtual-host-gatherer-libcloud`` pac
 To see which objects and resources have been inventoried, navigate to menu:Systems[System List > Virtual Systems].
 
 
-
-== Assigning Permissions
-
-The VHM you create needs to have the correct permissions assigned, in order for it to access the Azure VM.
-
-Log in to your Azure account as the subscription administrator, and ensure that the Azure user account and application are in the correct groups.
-The group that the application is in determines the role it has, and therefore the permissions.
-
+== Assigning permissions
+// OM 2022-02-28: if the UI suggestion has been implemented (#1170298 via #1170514) we may eventually be able to remove this section
 If the permissions are not set correctly, you might receive an error like this when you run [command]``virtual-host-gatherer``:
 
 ----
@@ -70,8 +69,6 @@ The [path]``input_azure.json`` file should contain this information:
     }
 ]
 ----
-
-
 
 == Azure UUID
 
