one entry per repo and replace label with repo name. https://github.com/SUSE/spacewalk/issues/17040

--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -301,11 +301,22 @@ echo "X-RHUI-SIGNATURE=$(curl -s http://169.254.169.254/latest/dynamic/instance-
 . Open the [path]``/etc/rhn/spacewalk-repo-sync/extra_headers.conf`` configuration file, and add or edit these lines with the correct information:
 +
 ----
-[channel_label]
-X-RHUI-ID=value
-X-RHUI-SIGNATURE=value
-----
+[<channel_label_1>]
+X-RHUI-ID=<value>
+X-RHUI-SIGNATURE=<value>
 
+[<channel_label_2>]
+X-RHUI-ID=<value>
+X-RHUI-SIGNATURE=<value>
+----
++
+  Replace [literal]``<channel_label_X>`` above with channel names such as [literal]``rhel8-baseos-repo``:
++
+----
+[rhel8-baseos-repo]
+X-RHUI-ID=...
+X-RHUI-SIGNATURE=...
+----
 
 
 
