New content for GPG encrypted Salt Pillars (#1448)
* New content for GPG encrypted Salt Pillars.

* Changelog entry.

* Formatting fix.

* File name and title changed.

* Renamed file.

* Typos fixed.

* Update modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/specialized-guides/pages/salt/salt-gpg-encrypted-pillars.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -17,6 +17,7 @@ endif::[]
 *** xref:salt/salt-command.adoc[Salt Command]
 *** xref:salt/salt-useful-commands.adoc[Common Salt Commands]
 *** xref:salt/salt-states-and-pillars.adoc[Salt States and Pillars]
+*** xref:salt/salt-gpg-encrypted-pillars.adoc[GPG Encrypted Pillars]
 *** xref:salt/salt-custom-states.adoc[Custom Salt States]
 *** xref:salt/salt-file-locations.adoc[File Locations]
 *** xref:salt/salt-gitfs.adoc[GitFS Fileserver Backend]
