Bug fix, reorganizing the existing document to make more sense.

--- a/modules/client-configuration/pages/vhm-gce.adoc
+++ b/modules/client-configuration/pages/vhm-gce.adoc
@@ -7,9 +7,15 @@ The VHM allows {productname} to obtain and report information about your virtual
 For more information on VHMs, see xref:client-configuration:vhm.adoc[].
 
 
+== Prerequisites
+
+The VHM you create needs to have the correct permissions assigned, in order for it to access the GCE VM.
+
+Log in to your Google Cloud Platform account as an administrator, and use the Cloud Identity and Access Management (IAM) tool to ensure that the service account has the appropriate roles.
+//You also need to ensure that the VM has been assigned the `VM`` role.
+
 
 == Create a GCE VHM
-
 
 The Virtual Host Manager (VHM) runs on the {productname} Server.
 
@@ -20,16 +26,14 @@ Ensure you have installed the [systemitem]``virtual-host-gatherer-libcloud`` pac
 Before you begin, log in to the GCE panel, and download a certificate file.
 Store this file locally on your {productname} Server, and take note of the path.
 
-
-
 .Procedure: Creating a GCE VHM
 
 . In the {productname} {webui}, navigate to menu:Systems[Virtual Host Managers].
 . Click btn:[Create] and select [guimenu]``Google Compute Engine`` from the drop-down menu.
 . In the [guimenu]``Add a Google Conpute Engine Virtual Host Manager`` section, use these parameters:
 * In the [guimenu]``Label`` field, type a custom name for your VHM.
-* In the [guimenu]``Service Account Email`` field, type the email address associated with your Google account.
-* In the [guimenu]``Cert Path`` field, type the path to the certificate downloaded from the GCE panel.
+* In the [guimenu]``Service Account Email`` field, type the email address associated with your service account.
+* In the [guimenu]``Cert Path`` field, type the local path on the {productname} server to the key that you downloaded from the GCE panel.
 * In the [guimenu]``Project ID`` field, type the project ID used by the GCE instance.
 * In the [guimenu]``Zone`` field, type the zone your VM is located in.
     This is required for subscription matching to work.
@@ -42,11 +46,6 @@ To see which objects and resources have been inventoried, navigate to menu:Syste
 
 
 == Assigning Permissions
-
-The VHM you create needs to have the correct permissions assigned, in order for it to access the GCE VM.
-
-Log in to your Google Cloud Platform account as an administrator, and use the Cloud Identity and Access Management (IAM) tool to ensure that the service account has the appropriate roles.
-You also need to ensure that the VM has been assigned the `VM`` role.
 
 If the permissions are not set correctly, you might receive an error like this when you run [command]``virtual-host-gatherer``:
 
