Fixed broken link due to file renaming.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -14,8 +14,8 @@ endif::[]
 // Ansible
 ifeval::[{suma-content} == true]
 ** xref:ansible-integration.adoc[Ansible Integration]
-*** xref:ansible-setup-control-node.adoc[Setup Ansible Control Node]
-*** xref:ansible-compliance-as-code.adoc[Compliance as Code]
+*** xref:ansible-setup-control-node.adoc[Setup Ansible control node]
+*** xref:ansible-compliance-as-code.adoc[Compliance as code]
 endif::[]
 // Authentication methods
 ** xref:auth-methods.adoc[Authentication Methods]
