--- a/modules/client-configuration/pages/registration-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/registration-methods-saltbundle.adoc
@@ -5,8 +5,7 @@ The registration method with the Salt bundle is the recommended registration met
 This section explains the advantages and limitations of the current implementation.
 The Salt bundle is provided as the [package]``venv-salt-minion`` that consists of Salt, Python, and the Python modules Salt depends on.
 Bootstrapping with {webui} still requires Python to be installed on the client.
-// per feedback: this sentence need clarification if we want to keep it:
-// Using the Salt bundle, in most cases it is no longer needed that the client provides the required Python version or any Python modules.
+Using the Salt bundle, it is no longer needed that the client provides the required Python version or any Python modules.
 
 If you bootstrap new clients, registration with the Salt bundle is the default method.
 You can switch existing clients to the Salt bundle method.
@@ -20,8 +19,16 @@ It is recommended to switch to [package]``venv-salt-minion`` in two steps to avo
 . Apply [literal]``util.mgr_switch_to_venv_minion`` with no pillar specified first.
   This will result in the switch to [package]``venv-salt-minion`` with copying configuration files etc.
   It will not clean up the original [package]``salt-minion`` configurations and its packages.
++
+----
+salt <minion_id> state.apply util.mgr_switch_to_venv_minion
+----
 . Apply [literal]``util.mgr_switch_to_venv_minion`` with [literal]``mgr_purge_non_venv_salt`` set to [literal]``True`` to remove [package]``salt-minion`` and with [literal]``mgr_purge_non_venv_salt_files`` set to [literal]``True`` to remove all the files related to [package]``salt-minion``.
 This second step repeats the first step, and then removes the old configuration files and the now obsolete [package]``salt-minion`` package.
++
+----
+salt <minion_id> state.apply util.mgr_switch_to_venv_minion pillar='{"mgr_purge_non_venv_salt_files": True, "mgr_purge_non_venv_salt": True}'
+----
 
 On the other hand, it is also possible to avoid installing the Salt bundle and keep using [package]``salt-minion`` instead.
 In this case specify one of these options:
