Fixed page title.

--- a/modules/administration/pages/ansible-setup-control-node.adoc
+++ b/modules/administration/pages/ansible-setup-control-node.adoc
@@ -1,5 +1,5 @@
 [[setup-ansible-control-node]]
-= Setup an Ansible control node
+= Setup Ansible control node
 
 To setup an Ansible control node, execute the following steps from the {productname} {webui}.
 
