--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -31,5 +31,6 @@ You do not need to delete any previously stored keys.
 [IMPORTANT]
 ====
 Trusting a GPG key is important for security on clients. 
-It is the task of the admin to decide which keys are needed and can be trusted. Trusting the key is done manually,  either by writing a Salt state or adding the keys to the bootstrap script.
+It is the task of the admin to decide which keys are needed and can be trusted.
+Trusting the key is done manually,  either by writing a Salt state or adding the keys to the bootstrap script.
 ====
