Add Salt bundle details to registration-webui

--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -3,13 +3,17 @@
 
 Registering clients with the {productname} {webui} works for Salt clients only.
 
-If you are bootstrapping Salt clients using the {webui}, you need to ensure that the client system has Python installed before you begin.
-For Salt clients running {sles}{nbsp}12 or older, you also need the [package]``python-xml`` package.
-// FIXME: change Salt bundle, when implemented
-// If you use the Salt bundle, which now is the default, the needed Python environment will be provided automatically.
-// For more information, see xref:client-configuration:registration-methods-saltbundle.adoc[].
+If you are bootstrapping Salt clients using the {webui}, it is using xref:specialized-guides:salt:salt-ssh.adoc[Salt SSH] to execute the bootstrap process on the client.
+Salt bundle is used to handle Salt-SSH session on the client, so it is not Python dependant as Python is shipped with the bundle.
 
 [IMPORTANT]
+====
+As Salt bundle is shipped with the bootstrap repository, the repository must be created before executing bootstrap process for the client.
+Pre flight script is detecting the OS version on the client and selects proper bootstrap repo the same way as bootstrap script does.
+For more information, see xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[Prepare to Create a Bootstrap Repository].
+====
+
+[WARNING]
 ====
 Do not register the {productname} Server to itself.
 The {productname} Server must be managed individually or by using another separate {productname} Server.
