--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -14,7 +14,7 @@ For more information on custom Salt states, see xref:salt:custom-states.adoc[].
 
 
 
-.Procedure: Trusting GPG Keys on Clients
+.Procedure: Trusting GPG Keys on Clients Using a Bootstrap Script
 . On the {productname} Server, at the command prompt, check the contents of the [path]``/srv/www/htdocs/pub/`` directory.
   This directory contains all available public keys.
   Take a note of the key that applies to the channel assigned to the client you are registering.
@@ -26,3 +26,10 @@ uyuni-gpg-pubkey-0d20833e.key
 ----
 +
 You do not need to delete any previously stored keys.
+
+[IMPORTANT]
+====
+Trusting a GPG key is important for security on clients. 
+It is the task of the admin to decide which keys are needed and can be trusted.
+Trusting the key is done manually,  either by writing a Salt state or adding the keys to the bootstrap script.
+====
