Fix typos and fix the section

--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -31,11 +31,11 @@ Bootstrapping this way will only work if you use the [package]``salt-minion`` be
 Salt Bundle ([package]``venv-salt-minion``)::
 +
 * [path]``/etc/venv-salt-minion/``
-* [path}``/etc/venv-salt-minion/minion``
+* [path]``/etc/venv-salt-minion/minion``
 * [path]``/etc/venv-salt-minion/minion.d/NAME.conf``
 * systemd service file: [path]``venv-salt-minion.service``
 
-For more information about the Salt bundle, see xref:client-configuration:registration-methods-saltbundle.adoc[].
+For more information about the Salt bundle, see xref:client-configuration:registration-methods-saltbundle.adoc[Register with Salt Bundle].
 
 
 
@@ -79,10 +79,11 @@ salt-key -a '<client>'
 
 
 
-Salt ([package]``salt-minion``)::
+
+Salt Minion ([package]``salt-minion``)::
 +
 * [path]``/etc/salt/``
-* [path}``/etc/salt/minion``
+* [path]``/etc/salt/minion``
 * [path]``/etc/salt/minion.d/NAME.conf``
 * systemd service file: [path]``salt-minion.service``
 
