--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -40,6 +40,7 @@ For more information about the Salt bundle, see xref:client-configuration:regist
 
 
 .Procedure: Registering Clients with Salt Bundle Configuration File
+--
 . On the Salt client, open the [literal]``minion`` configuration file.
   The configuration file is either located at:
 +
@@ -76,7 +77,7 @@ systemctl restart venv-salt-minion
 ----
 salt-key -a '<client>'
 ----
-
+--
 
 
 
@@ -88,6 +89,7 @@ Salt Minion ([package]``salt-minion``)::
 * systemd service file: [path]``salt-minion.service``
 
 .Procedure: Registering Clients with Salt Minion Configuration File
+--
 . On the Salt client, open the [literal]``minion`` configuration file.
   The configuration file is either located at:
 +
@@ -124,8 +126,12 @@ systemctl restart salt-minion
 ----
 salt-key -a '<client>'
 ----
+--
 
+[NOTE]
+===
 For more information about the Salt minion configuration file, see https://docs.saltstack.com/en/latest/ref/configuration/minion.html.
+===
 
 [WARNING]
 ====
