--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -3,7 +3,7 @@
 
 Registering clients with the {productname} {webui} works for Salt clients only.
 
-If you are bootstrapping Salt clients using the {webui}, it is using xref:specialized-guides:salt:salt-ssh.adoc[Salt SSH] to execute the bootstrap process on the client.
+If you are bootstrapping Salt clients using the {webui}, it is using xref:specialized-guides:salt/salt-ssh.adoc[Salt SSH] to execute the bootstrap process on the client.
 Salt bundle is used to handle Salt-SSH session on the client, so it is not Python dependant as Python is shipped with the bundle.
 
 [IMPORTANT]
