--- a/modules/client-configuration/pages/registration-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/registration-methods-saltbundle.adoc
@@ -4,7 +4,7 @@
 The registration method with the Salt bundle is the recommended registration method as long as it covers your use case.
 This section explains the advantages and limitations of the current implementation.
 The Salt bundle is provided as the [package]``venv-salt-minion`` that consists of Salt, Python, and the Python modules Salt depends on.
-Bootstrapping with {webui} still requires Python to be installed on the client.
+Bootstrapping with {webui} is using Salt bundle as well, so bootstrapping with {webui} is not Python dependant.
 Using the Salt bundle, it is no longer needed that the client provides the required Python version or any Python modules.
 
 If you bootstrap new clients, registration with the Salt bundle is the default method.
