--- a/modules/client-configuration/pages/vhm-gce.adoc
+++ b/modules/client-configuration/pages/vhm-gce.adoc
@@ -9,7 +9,7 @@ For more information on VHMs, see xref:client-configuration:vhm.adoc[].
 
 == Prerequisites
 
-The VHM you create needs to have the correct permissions assigned, in order for it to access the GCE VM.
+The VHM you create needs to have the correct permissions assigned to access the GCE VM.
 
 Log in to your Google Cloud Platform account as an administrator, and use the Cloud Identity and Access Management (IAM) tool to ensure that the service account has the appropriate roles.
 //You also need to ensure that the VM has been assigned the `VM`` role.
