--- a/modules/client-configuration/pages/vhm-gce.adoc
+++ b/modules/client-configuration/pages/vhm-gce.adoc
@@ -33,7 +33,7 @@ Store this file locally on your {productname} Server, and take note of the path.
 . In the [guimenu]``Add a Google Conpute Engine Virtual Host Manager`` section, use these parameters:
 * In the [guimenu]``Label`` field, type a custom name for your VHM.
 * In the [guimenu]``Service Account Email`` field, type the email address associated with your service account.
-* In the [guimenu]``Cert Path`` field, type the local path on the {productname} server to the key that you downloaded from the GCE panel.
+* In the [guimenu]``Cert Path`` field, type the local path on the {productname} Server to the key that you downloaded from the GCE panel.
 * In the [guimenu]``Project ID`` field, type the project ID used by the GCE instance.
 * In the [guimenu]``Zone`` field, type the zone your VM is located in.
     This is required for subscription matching to work.
