--- a/modules/specialized-guides/pages/salt/salt-ssh.adoc
+++ b/modules/specialized-guides/pages/salt/salt-ssh.adoc
@@ -34,7 +34,8 @@ For registered clients `--roster=uyuni` is used instead.
 [IMPORTANT]
 ====
 It is not recommended to use [command]``salt-ssh`` as the call will be processed with current user permissions and in case of calling it with `root` user can cause permission issues for the files on processing next calls with `salt-api`.
-Please use [command]``mgr-salt-ssh`` instead. It is changing effective user to `salt` on each call. If you want to use it with a user other than `root`, the user should have the permission to change effective user to `salt`.
+Use [command]``mgr-salt-ssh`` instead because it is changing effective user to `salt` on each call.
+If you want to use it with a user other than `root`, the user should have the permission to change effective user to `salt`.
 ====
 
 
