--- a/modules/specialized-guides/pages/salt/salt-ssh.adoc
+++ b/modules/specialized-guides/pages/salt/salt-ssh.adoc
@@ -188,7 +188,7 @@ The roster content contains:
 * `ssh_options`: other SSH options:
 ** `ProxyCommand` if the client connects through a proxy
 * `timeout`: defaults to 180 seconds
-* `ssh_pre_flight`: The path to the pre flight shell script (default: /usr/share/susemanager/salt-ssh/preflight.sh)
+* `ssh_pre_flight`: The path to the pre flight shell script (default: [path]``/usr/share/susemanager/salt-ssh/preflight.sh``)
 * `ssh_pre_flight_args`: The list of arguments to call the pre flight script on the client
 
 This image provides an overview of the Salt SSH bootstrap process.
