--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -32,6 +32,8 @@ endif::[]
 ifeval::[{suma-content} == true]
 // Ansible integration
 ** xref:ansible-integration.adoc[Ansible Integration]
+*** xref:ansible-compliance-as-code.adoc[Compliance as code]
+**** xref:ansible-setup-control-node.adoc[Setup Ansible control node]
 endif::[]
 // Authentication Methods
 ** xref:auth-methods.adoc[Authentication Methods]
