--- a/modules/salt/pages/salt-gpg-encrypted-pillars.adoc
+++ b/modules/salt/pages/salt-gpg-encrypted-pillars.adoc
@@ -35,7 +35,7 @@ gpg --gen-key --homedir /etc/salt/gpgkeys
 ----
 chown -R salt:salt /etc/salt/gpgkeys
 ----
-. Configure {salt} Master to use the new GPG home directory
+. Configure {salt} Master to use the new GPG home directory:
 +
 ----
 echo 'gpg_keydir: /etc/salt/gpgkeys' >/etc/salt/master.d/gpg-pillar.conf
