--- a/modules/salt/pages/salt-gpg-encrypted-pillars.adoc
+++ b/modules/salt/pages/salt-gpg-encrypted-pillars.adoc
@@ -45,7 +45,7 @@ systemctl reload-or-restart salt-master
 
 == Use GPG for encrypting Pillar secrets
 
-Salt GPG renderer decrypts GPG encrypted contents that are ASCI-armored. 
+Salt GPG renderer decrypts GPG encrypted contents that are ASCII-armored. 
 To use the GPG renderer in a Pillar YAML file, change 
 ----
 #!yaml
