Bacporting the changes to Salt book.

--- a/modules/salt/nav-salt-guide.adoc
+++ b/modules/salt/nav-salt-guide.adoc
@@ -14,6 +14,7 @@ endif::[]
 ** xref:salt-command.adoc[The Salt Command]
 ** xref:salt-useful-commands.adoc[Common Salt Commands]
 ** xref:salt-states.adoc[Salt States and Pillars]
+** xref:salt-gpg-encrypted-pillars.adoc[GPG Encrypted Pillars]
 ** xref:custom-states.adoc[Custom Salt States]
 ** xref:salt-file-locations.adoc[File Locations]
 ** xref:salt-gitfs.adoc[GitFS Fileserver Backend]
